# thesis-os

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: adapter-contracts.md  agent-persona-contracts.md  architecture.md  data-plane.md  design-principles.md  domain-specialist-skills.md  investment-philosophy.md  judgment-loop.md  local-database.md  memory-management.md  openclaw-reference-runtime.md  philosophy.md  promotion-and-compliance.md  public-data-sources.md  public-launch-plan.md  public-launch-post.md  qualitative-intel.md  recurring-jobs.md  runtime-adapters.md  sample-output-pack.md  screeners-and-feedback.md  security-boundary.md  skills-and-pipelines.md  thesis-os-coverage.md  three-agent-model.md  vault-governance.md  vault-ssot-wiki.md
examples/: sample_agent_skills.yaml  sample_feedback_report.md  sample_jobs.yaml  sample_memory_policy.yaml  sample_prediction_ledger.jsonl  sample_screener_candidate.json  sample_skill_catalog.yaml  sample_thesis.md  sample_vault_policy.yaml
examples/openclaw/: sample_agents.yaml  sample_harness_contract.yaml
examples/sample_outputs/: README.md  nightly-concentration-strategy.md  nightly-top5-deep-dive.md  prediction-ledger-accountability.md  screener-discovery-results.md  screener-performance-feedback.md  social-collection-summary.md  thesis-card-ai-infrastructure-basket.md
schemas/: action.schema.json  agent_skill.schema.json  evidence.schema.json  feedback.schema.json  prediction.schema.json  recurring_job.schema.json  thesis.schema.json
scripts/: redaction_gate.py  render_assets.py
scripts/hooks/: pre-push
tests/: test_demo.py
thesis_os/: __init__.py  __main__.py  cli.py  models.py
thesis_os/adapters/: __init__.py  base.py  sample.py
thesis_os/alpha/: __init__.py  collectors.py  evidence_builder.py  local_db.py  public_stock_quickstart.py  quant_screener.py  screener.py  trade_proxy.py
thesis_os/arki/: __init__.py  health_check.py  job_manifest.py  schema_lint.py  vault_writer.py
thesis_os/gyeokja/: __init__.py  decision_card.py  devil_advocate.py  feedback_interpreter.py  prediction_ledger.py  thesis_registry.py
thesis_os/lattice/: __init__.py  action_queue.py  decision_card.py
thesis_os/runtime/: workspace.py
