[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-os"
version = "0.5.0"
description = "A thesis-driven investment research OS for stock screeners, trading journals, portfolio feedback loops, and AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Thesis OS Contributors"}
]
keywords = [
  "investment",
  "investment-research",
  "stock-research",
  "stock-screener",
  "trading",
  "trading-journal",
  "portfolio-management",
  "equity-research",
  "quantitative-finance",
  "ai-agents",
  "research-os",
  "thesis",
  "evidence",
  "feedback-loop",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
assets = ["pillow>=10"]

[project.scripts]
thesis-os = "thesis_os.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thesis_os*"]
