[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-os"
version = "0.6.1"
description = "An accountability layer for investment agents: thesis cards, prediction ledgers, stock screeners, and feedback loops."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Thesis OS Contributors"}
]
keywords = [
  "investment",
  "investment-research",
  "stock-research",
  "stock-screener",
  "trading",
  "trading-journal",
  "portfolio-management",
  "equity-research",
  "quantitative-finance",
  "ai-agents",
  "judgment-os",
  "prediction-ledger",
  "auditable-ai",
  "evidence-first",
  "accountability-layer",
  "thesis-os",
  "thesis",
  "evidence",
  "feedback-loop",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/youngseongshin/thesis-investment-os"
Repository = "https://github.com/youngseongshin/thesis-investment-os"
Issues = "https://github.com/youngseongshin/thesis-investment-os/issues"

[project.optional-dependencies]
assets = ["pillow>=10"]

[project.scripts]
thesis-os = "thesis_os.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["thesis_os*"]
